--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,10 @@ select{
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     display: block;
 }
+#mvel{
+    width: 230px;
+    height: 21px;
+}
 
 #sel{
     display: flex;
@@ -78,12 +82,52 @@ select{
     background: rgb(139, 138, 138);
 }
 
+#cores{
+    display: flex;
+}
+#cores div{
+    margin-right: 15px;
+}
+
+#tabela{
+    text-align: center;
+    margin-top: 1em;
+}
+
+.quant{
+    width: 50px;
+    border: 0;
+}
+.valor, .total{
+    width: 25px;
+    border: 0;
+}
+.discr{
+    width: 900px;
+    border: 0;
+}
+
+#doutro input{
+    display: block;
+    height: 21px;
+    padding: 0.2em;
+    border: 1px solid rgb(126, 126, 126);
+    box-shadow: 2px 2px 2px rgb(0,0,0,0.2);
+
+}
+#cores input:focus, #cores select:focus{
+    background: rgb(139, 138, 138);
+}
+
+
 .botao{
+    display: flex;
     width: 100px;
     font-size: 1.2em;
     color: white;
     background-color: blueviolet;
     border: 0;
+    margin-top: 1em;
     margin-bottom: 1em;
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
