--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
 }
 
 #imagem img{
-    box-sizing:content-box;
+    box-sizing:border-box;
     display: block;
     margin-left: auto;
     margin-right: auto;
