--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body{
     width: 90%;
     min-height: fit-content;
     max-height: fit-content;
-    min-width: fit-content;
+    min-width:fit-content;
     max-width: fit-content;
 } 
 
@@ -102,7 +102,7 @@ select{
 #tabela{
     text-align: center;
     margin-top: 1em;
-    margin-right: auto;
+    margin-right:0 auto;
 }
 
 .quant{
@@ -114,7 +114,7 @@ select{
     border: 0;
 }
 .discr{
-    width: 900px;
+    width: 850px;
     border: 0;
 }
 
