--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ select{
 #tabela{
     text-align: center;
     margin-top: 1em;
-    margin-right:0 auto;
+    margin-right:100px;
 }
 
 .quant{
